Trying to work on the spec on  a local server
Have got loaction points mostly working, crud doesnt work
